test/tests/stages/18_structures/invalid_types/invalid_member_operators/nested_arrow_pointer_to_non_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[45]:
  struct
  identifier(s)
  {
  long
  identifier(l)
  ;
  }
  ;
  struct
  identifier(has_ptr)
  {
  double
  *
  identifier(ptr)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(0.0)
  ;
  struct
  identifier(has_ptr)
  identifier(p_struct)
  =
  {
  &
  identifier(d)
  }
  ;
  return
  identifier(p_struct)
  .
  identifier(ptr)
  ->
  identifier(l)
  ;
  }
